Integrate the Python Fast Serializer test into 'ant check'.